--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@ body, header, main, input, h2, p, a{
 }
 
 header{
+    padding-top: 1vh;
     width: 100%;
     height: 8vh;
     background-color: #4E3629;
@@ -96,6 +97,7 @@ footer{
     bottom: 0vh;
     background-color: #4E3629;
     width: 100%;
+    padding-top: 1vh;
     height: 6vh;
     align-content: center;
     text-align: center;
